# lignin-schema

./: .travis.yml  CHANGELOG.md  CONTRIBUTING.md  COPYRIGHT.md  Cargo.toml  README.md  SECURITY.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml
.github/workflows/: ci.yml
src/: lib.rs
tests/: meta_constants_.rs  validation.rs
