[package]
name = "lignin-schema"
version = "0.0.4"
authors = ["Tamme Schichler <tamme@schichler.dev>"]
edition = "2018"
description = "Partial HTML, MathML and SVG schemas as static APIs, with documentation and deprecation attributes. Can be used by macro crates to implement errors, warnings and hover docs."
license = "MIT OR Apache-2.0"
repository = "https://github.com/Tamschi/lignin-schema"
homepage = "https://github.com/Tamschi/lignin-schema/tree/v0.0.4"
documentation = "https://docs.rs/lignin-schema/0.0.4"
keywords = ["HMTL", "MathML", "SVG"]
categories = ["web-programming", "rust-patterns"]
readme = "README.md"
include = [
	"**/*.rs",
	"!tests/unincluded_*.rs", # Tests of meta data files not included in the package.
	"Cargo.toml",
	"CHANGELOG.md",
	"CODE_OF_CONDUCT.md",
	"LICENSE-*",
	"README.md",
	"SECURITY.md",
]
publish = false

[badges]
is-it-maintained-issue-resolution = { repository = "Tamschi/lignin-schema" }
is-it-maintained-open-issues = { repository = "Tamschi/lignin-schema" }
maintenance = { status = "experimental" } # This may differ between branches.

[dependencies]
heck-but-macros = "0.0.1"

[dev-dependencies]
cargo-husky = "1.5.0"
doc-comment = "0.3.3"
git_info = "0.1.2"
version-sync = "0.9.3"
wasm-bindgen-test = "0.3.30"
